--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -37,10 +37,10 @@ $input-placeholder-color: $my-darker-grey;
 @import "./node_modules/bulma/sass/layout/section.sass";
 @import "./node_modules/bulma-extensions/bulma-divider/dist/css/bulma-divider.sass";
 // extensions
-@import "./node_modules/bulma-extensions/bulma-checkradio/dist/css/bulma-checkradio.sass";
+// @import "./node_modules/bulma-extensions/bulma-checkradio/dist/css/bulma-checkradio.sass";
 @import "./node_modules/bulma-extensions/bulma-divider/dist/css/bulma-divider.sass";
 @import "./node_modules/bulma-extensions/bulma-switch/src/sass/index.sass";
-@import "./node_modules/bulma-extensions/bulma-tagsinput/src/sass/index.sass";
+// @import "./node_modules/bulma-extensions/bulma-tagsinput/src/sass/index.sass";
 @import "./node_modules/bulma-extensions/bulma-carousel/src/sass/index.sass";
 
 .is-divider-vertical {
