upvotes - added tooltip if not auth

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -44,6 +44,7 @@ $input-placeholder-color: $my-darker-grey;
 @import "./node_modules/bulma-extensions/bulma-switch/src/sass/index.sass";
 // @import "./node_modules/bulma-extensions/bulma-tagsinput/src/sass/index.sass";
 @import "./node_modules/bulma-extensions/bulma-carousel/src/sass/index.sass";
+@import "./node_modules/bulma-extensions/bulma-tooltip/src/sass/index.sass";
 
 .is-divider-vertical {
     padding: 0;
