--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -43,8 +43,9 @@ $input-placeholder-color: $my-darker-grey;
 @import "./node_modules/bulma-extensions/bulma-divider/dist/css/bulma-divider.sass";
 @import "./node_modules/bulma-extensions/bulma-switch/src/sass/index.sass";
 // @import "./node_modules/bulma-extensions/bulma-tagsinput/src/sass/index.sass";
-@import "./node_modules/bulma-extensions/bulma-carousel/src/sass/index.sass";
+// @import "./node_modules/bulma-extensions/bulma-carousel/src/sass/index.sass";
 @import "./node_modules/bulma-extensions/bulma-tooltip/src/sass/index.sass";
+@import "./node_modules/swiper/swiper.scss";
 
 .is-divider-vertical {
     padding: 0;
